--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -20,7 +20,7 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: "3.10"
-    - name: Install dependencies
+    - name: Install dependencies (algosdk, flake8, pytest)
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest py-algorand-sdk
