--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,8 +22,9 @@ jobs:
         python-version: "3.10"
     - name: Install dependencies (algosdk, flake8, pytest)
       run: |
+        pip freeze > requirements.txt
         python -m pip install --upgrade pip
-        pip install flake8 pytest py-algorand-sdk
+        pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
